@@ -11,6 +11,11 @@ Revision history for Perl extension AnyEvent.
           rfc 2782.
         - correctly abort on srv-record targets of ".".
         - added AnyEvent::DNS::wait_for_slot.
+        - in the unlikely event of a virtual circuit connection
+          being invalidated by a delayed udp reply, AnyEvent::DNS
+          could die. this has been fixed.
+        - plug a probable memleak in the DNS vc code.
+        - use configured timeout also for VC request phase.
 
 4.1  Thu May 29 05:45:40 CEST 2008
 	- INCOMPATIBLE CHANGE: renamed xxx_ip functions to xxx_address
